--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,4 +3,12 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
+  margin: 0;
+}
+
+@media (max-width: 620px) {
+  .footer__text {
+    font-size: 14px;
+    margin-bottom: 36px;
+  }
 }
