--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,7 +27,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  max-width: 400x;
+  max-width: 400px;
 }
 
 .profile__edit {
@@ -75,4 +75,50 @@
 .profile__add-button-image {
   height: 22px;
   width: 22px;
+}
+
+@media (max-width: 800px) {
+  .profile__add {
+    width: 50px;
+  }
+
+  .profile__name {
+    font-size: 32px;
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 620px) {
+  .profile {
+    flex-direction: column;
+    margin-bottom: 35px;
+  }
+
+  .profile__info {
+    grid-gap: 14px 10px;
+  }
+
+  .profile__avatar {
+    margin: 0px 0px 30px 0px;
+  }
+
+  .profile__name {
+    font-size: 22px;
+  }
+
+  .profile__description {
+    font-size: 14px;
+    margin: 0px auto 36px;
+  }
+
+  .profile__edit {
+    background: transparent url(../images/edit-button_small.svg) no-repeat;
+    width: 18px;
+    height: 18px;
+  }
+
+  .profile__add {
+    width: 280px;
+    margin: 0px auto;
+  }
 }
